# ComfyUIDepthEstimation

./: .gitattributes  .gitignore  CLAUDE.md  DA3_CAMERA_INTEGRATION_PLAN.md  GEMINI.md  README.md  __init__.py  comfyui_depth_estimation_node.py  dependency_fix.md  depth_estimation_node.py  nodes.py  publish.yaml  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
skills/ComfyUI-node-development-skill/: README.md  SKILL.md
skills/ComfyUI-node-development-skill/examples/: basic_image_processor.py
skills/ComfyUI-node-development-skill/references/: comprehensive-guide.md
skills/ComfyUI-node-development-skill/scripts/: validate.py
workflows/: Depth_Map_Generator_V1.json  da3_camera_demo.json  da3_test_workflow.json
