[project]
name = "comfyuidepthestimation"
description = "A robust custom depth estimation node for ComfyUI using Depth-Anything models. It integrates depth estimation with configurable post-processing options including blur, median filtering, contrast enhancement, and gamma correction."
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = [
    "transformers>=4.20.0",
    "Pillow>=9.1.0",
    "numpy>=1.23.0",
    "timm>=0.6.12",
    "huggingface-hub>=0.16.0"
]

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUIDepthEstimation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "Limbicnation"
DisplayName = "Depth Estimation Node"
Icon = "images/depth-estimation-icon.png"