[project]
name = "comfyuidepthestimation"
description = "A robust custom depth estimation node for ComfyUI using Depth-Anything models. It integrates depth estimation with configurable post-processing options including blur, median filtering, contrast enhancement, and gamma correction."
version = "1.1.3"
license = { file = "LICENSE" }
dependencies = [
    "transformers>=4.20.0",
    "tokenizers>=0.13.3",
    "timm>=0.6.12",
    "huggingface-hub>=0.16.0",
    "protobuf==3.20.3",
    "requests>=2.27.0",
    "wget>=3.2"
]

[project.urls]
Repository = "https://github.com/Limbicnation/ComfyUIDepthEstimation"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "limbicnation"
DisplayName = "Depth Estimation Node"
Icon = "icon.png"
